--- a/index.html
+++ b/index.html
@@ -1,79 +1,137 @@
-
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>V.E. BATIMENT</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>LE NUCLEAIRE — Services & Ingénierie</title>
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { font-family: 'Inter', sans-serif; background: #f9fafb; color: #111827; line-height: 1.6; }
-    header, footer { background: #1f2937; color: white; text-align: center; padding: 30px; }
-    nav a { color: #fbbf24; margin: 0 12px; text-decoration: none; font-weight: 600; }
-    section { padding: 60px 20px; max-width: 1200px; margin: auto; text-align: center; }
-    h2 { color: #1f2937; margin-bottom: 20px; font-size: 2.4em; }
-    .gallery { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; }
-    .gallery img { width: 100%; border-radius: 8px; }
-    .contact-form input, .contact-form textarea {
-      width: 100%; padding: 10px; margin: 10px 0; border: 1px solid #ccc; border-radius: 5px;
+    :root{
+      --navy:#0b1530;     /* primary */
+      --neon:#27ffd2;     /* accent  */
+      --bg:#f6f9ff;       /* page bg */
+      --card:#ffffff;     /* cards   */
+      --ink:#0f1720;
     }
-    iframe { width: 100%; height: 300px; border: 0; border-radius: 8px; margin-top: 20px; }
+    *{box-sizing:border-box}
+    body{margin:0;font-family:Inter,Arial,Helvetica,sans-serif;background:var(--bg);color:var(--ink)}
+    a{color:var(--navy);text-decoration:none}
+
+    header{
+      background:linear-gradient(135deg,var(--navy),#07112a);
+      color:#fff;text-align:center;padding:28px 16px;border-bottom:5px solid var(--neon)
+    }
+    header h1{margin:0;font-size:2.4rem}
+    header p{margin:6px 0 0;opacity:.95}
+
+    nav{background:#0a1226;text-align:center;padding:12px}
+    nav a{color:#fff;margin:0 14px;font-weight:700}
+    nav a:hover{color:var(--neon)}
+
+    /* HERO (image + intro) */
+    .hero{max-width:1100px;margin:22px auto;display:grid;grid-template-columns:1.15fr .85fr;gap:18px;align-items:center;padding:0 14px}
+    .hero img{width:100%;border-radius:14px;border:4px solid var(--neon);object-fit:cover}
+    .hero .box{background:var(--card);border-left:6px solid var(--neon);border-radius:14px;padding:16px}
+
+    .section{max-width:1100px;margin:22px auto;background:var(--card);padding:22px;border-radius:12px;box-shadow:0 6px 18px rgba(0,0,0,.06)}
+    .section h2{margin:0 0 12px;color:var(--navy)}
+    .two-col{display:grid;grid-template-columns:1fr 1fr;gap:20px}
+    ul{margin:0;padding-left:18px;line-height:1.8}
+
+    /* feature cards */
+    .features{display:grid;grid-template-columns:repeat(auto-fit,minmax(240px,1fr));gap:12px}
+    .feat{background:#eefcff;border:1px solid #cfeff0;border-radius:10px;padding:12px}
+
+    /* gallery */
+    .gallery{display:grid;grid-template-columns:repeat(auto-fit,minmax(230px,1fr));gap:14px;margin-top:14px}
+    .gallery img{width:100%;border-radius:10px;border:2px solid var(--neon);object-fit:cover;aspect-ratio:4/3}
+
+    .cta{margin-top:12px;display:flex;gap:12px;flex-wrap:wrap}
+    .btn{background:var(--neon);color:#001e1c;padding:12px 16px;border-radius:10px;font-weight:800}
+    .btn.secondary{background:#fff;color:var(--navy);border:2px solid var(--navy)}
+
+    footer{background:linear-gradient(135deg,#07112a,var(--navy));color:#fff;text-align:center;padding:18px;margin-top:26px;border-top:5px solid var(--neon)}
+    @media (max-width:900px){ .hero{grid-template-columns:1fr} }
   </style>
 </head>
 <body>
 
-<header>
-  <h1>V.E. BATIMENT</h1>
+  <header>
+    <h1>LE NUCLEAIRE</h1>
+    <p>Services & Ingénierie — sûreté, maintenance, et projets industriels</p>
+  </header>
+
   <nav>
-    <a href="#about">Présentation</a>
+    <a href="#about">À propos</a>
     <a href="#services">Services</a>
-    <a href="#gallery">Galerie</a>
+    <a href="#galerie">Galerie</a>
     <a href="#contact">Contact</a>
-    <a href="#map">Adresse</a>
   </nav>
-</header>
 
-<section id="about">
-  <h2>Présentation</h2>
-  <p>Basée à Les Mureaux, V.E. BATIMENT est une entreprise spécialisée dans la maçonnerie générale et les gros travaux de construction. Grâce à une équipe qualifiée, nous réalisons des chantiers sur mesure en respectant les normes de qualité et de sécurité.</p>
-</section>
+  <!-- HERO -->
+  <section class="hero">
+    <img src="https://avatars.mds.yandex.net/i?id=232687530e0ad2cf6ab4d857c8a9653d07fca3f2-5438832-images-thumbs&n=13" alt="Site industriel">
+    <div class="box">
+      <h2 style="margin:0 0 6px">Fiabilité, traçabilité, exigences de sûreté.</h2>
+      <p>Accompagnement technique pour sites et projets à haute criticité : préparation d’interventions, supervision chantier, documentation qualité et conformité réglementaire.</p>
+      <div class="cta">
+        <a class="btn" href="tel:+33751279974">Appeler : +33 7 51 27 99 74</a>
+        <a class="btn secondary" href="mailto:admin@porudfc.shop">Écrire : admin@porudfc.shop</a>
+      </div>
+    </div>
+  </section>
 
-<section id="services">
-  <h2>Nos Services</h2>
-  <p>Gros œuvre de bâtiment, travaux de maçonnerie, fondations, rénovation structurelle, et accompagnement personnalisé pour tous vos projets de construction.</p>
-</section>
+  <!-- ABOUT -->
+  <section id="about" class="section">
+    <h2>À propos</h2>
+    <div class="two-col">
+      <p><strong>LE NUCLEAIRE</strong> réunit des spécialistes chantier & bureaux d’études. Culture sécurité, procédures claires, reporting régulier, et coordination multi-métiers.</p>
+      <p>Interventions en environnement réglementé, préparation/retour d’expérience, et support documentaire complet (plans, analyses de risques, contrôles).</p>
+    </div>
+  </section>
 
-<section id="gallery">
-  <h2>Galerie</h2>
-  <div class="gallery">
-    <img src="https://images.unsplash.com/photo-1570126681032-3a7c41f13b0d?auto=format&fit=crop&w=800&q=80" alt="chantier 1">
-    <img src="https://images.unsplash.com/photo-1570129477492-45c003edd2be?auto=format&fit=crop&w=800&q=80" alt="chantier 2">
-    <img src="https://images.unsplash.com/photo-1581090700227-1e37b190418e?auto=format&fit=crop&w=800&q=80" alt="chantier 3">
-  </div>
-</section>
+  <!-- SERVICES -->
+  <section id="services" class="section">
+    <h2>Nos services</h2>
+    <div class="features">
+      <div class="feat"><strong>Préparation & planification</strong><br/>Dossiers d’intervention, analyses HSE, consignations, logistique.</div>
+      <div class="feat"><strong>Supervision & coordination</strong><br/>Suivi terrain, contrôles, traçabilité, levée d’écarts.</div>
+      <div class="feat"><strong>Maintenance & modifications</strong><br/>Mécanique, électricité, instrumentation, essais.</div>
+      <div class="feat"><strong>Qualité & conformité</strong><br/>Procédures, audits, DOE, documentation réglementaire.</div>
+    </div>
+  </section>
 
-<section id="contact">
-  <h2>Contactez-nous</h2>
-  <p>Email : contact@vebatiment.shop</p>
-  <p>Téléphone : +33 6 05 99 64 90</p>
-  <form class="contact-form">
-    <input type="text" placeholder="Nom">
-    <input type="email" placeholder="Email">
-    <textarea placeholder="Votre message"></textarea>
-    <button type="submit">Envoyer</button>
-  </form>
-</section>
+  <!-- GALERIE -->
+  <section id="galerie" class="section">
+    <h2>Galerie</h2>
+    <div class="gallery">
+      <img src="https://avatars.mds.yandex.net/i?id=9d5a9ff26961de4577bf1c1908c8f38fe1962b4c-5229223-images-thumbs&n=13" alt="Contrôles techniques">
+      <img src="https://avatars.mds.yandex.net/i?id=8e469e375940b548cb60d570c23ad64a-5335399-images-thumbs&n=13" alt="Maintenance">
+      <img src="https://avatars.mds.yandex.net/i?id=28af64f8c6daacae7fc0ddf262aae7413a9bcdc2-2769679-images-thumbs&n=13" alt="Ingénierie & documentation">
+    </div>
+  </section>
 
-<section id="map">
-  <h2>Adresse</h2>
-  <p>66 Avenue du Maréchal Foch, 78130 Les Mureaux, France</p>
-  <iframe src="https://www.google.com/maps?q=66+Avenue+du+Mar%C3%A9chal+Foch,+Les+Mureaux,+France&output=embed" allowfullscreen loading="lazy"></iframe>
-</section>
+  <!-- CONTACT -->
+  <section id="contact" class="section">
+    <h2>Contact</h2>
+    <div class="two-col">
+      <div>
+        <p>📧 <strong>Email :</strong> <a href="mailto:admin@porudfc.shop">admin@porudfc.shop</a></p>
+        <p>📞 <strong>Téléphone :</strong> <a href="tel:+33751279974">+33 7 51 27 99 74</a></p>
+        <p>🛠️ <em>Interventions sur devis et plan d’assurance qualité.</em></p>
+      </div>
+      <div>
+        <p><em>Disponibilités</em></p>
+        <ul>
+          <li>Lun–Ven : 8h00 – 18h00</li>
+          <li>Urgences chantier : sur appel</li>
+        </ul>
+      </div>
+    </div>
+  </section>
 
-<footer>
-  &copy; 2025 V.E. BATIMENT — Tous droits réservés
-</footer>
+  <footer>
+    <p>&copy; 2025 LE NUCLEAIRE — Services & Ingénierie</p>
+  </footer>
 
 </body>
 </html>
